align fixed

--- a/wp-content/themes/minyawns/less/main.less
+++ b/wp-content/themes/minyawns/less/main.less
@@ -1069,7 +1069,7 @@ background: #F8F8F8!important;
   text-align: center;
   display: block;
   font-weight: bold;
-  bottom: 6px;
+  bottom: 0px;
 }
 }
 .avtar-btn{
